# abi_stable_crates

./: .gitignore  .travis.yml  APACHE_license  Cargo.toml  Changelog.md  MIT_license  commit.sh  readme.md
abi_stable/: .gitignore  Cargo.toml  build.rs  rustfmt.toml
abi_stable/docs/: introduction.md  stable_abi_trait.md
abi_stable/src/: _immovable_wrapper.rs  abi_stability.rs  as_proxy.rs  cabi_type.rs  closures.rs  const_utils.rs  derive_macro_reexports.rs  derive_tests.rs  docs.rs  dyn_init.rs  erased_types.rs  external_types.rs  for_examples.rs  ignored_wrapper.rs  impls.rs  inline_storage.rs  internal_macros.rs  late_static_ref.rs  lazy_static_ref.rs  lib.rs  library.rs  macros.rs  marker_type.rs  misc_tests.rs  multikey_map.rs  nonexhaustive_enum.rs  opaque_type.rs  pointer_trait.rs  prefix_type.rs  reexports.rs  reflection.rs  return_value_equality.rs  sabi_trait.rs  sabi_types.rs  static_slice.rs  static_str.rs  std_types.rs  test_macros.rs  test_utils.rs  trait_object_test.rs  (+7 more)
abi_stable/src/abi_stability/: abi_checking.rs  const_generics.rs  extra_checks.rs  get_static_equivalent.rs  layout_tests.rs  reflection.rs  reflection_tests.rs  stable_abi_trait.rs  tagging.rs  type_layout.rs
abi_stable/src/docs/: get_static_equivalent.rs  library_evolution.rs  mangle_library_getter.rs  prefix_types.rs  sabi_extern_fn.rs  sabi_nonexhaustive.rs  sabi_trait_attribute.rs  sabi_trait_inherent.rs  stable_abi_derive.rs  stable_abi_trait.rs  troubleshooting.rs  unsafe_code_guidelines.rs
abi_stable/src/erased_types/: c_functions.rs  dyn_trait.rs  enabled_traits_macro.rs  interfaces.rs  iterator.rs  trait_objects.rs  traits.rs  type_info.rs  virtual_wrapper.rs  vtable.rs
abi_stable/src/external_types/: crossbeam_channel.rs  parking_lot.rs  serde_json.rs
abi_stable/src/layout_tests/: prefix_types.rs  value.rs
abi_stable/src/macros/: internal.rs  nul_str_macros.rs
abi_stable/src/marker_type/: stable_abi_impls.rs
abi_stable/src/misc_tests/: impl_interfacetype_attr.rs  impl_interfacetype_macro.rs
abi_stable/src/nonexhaustive_enum/: alt_c_functions.rs  doc_enums.rs  examples.rs  nonexhaustive.rs  traits.rs  vtable.rs
abi_stable/src/pointer_trait/: tests.rs
abi_stable/src/prefix_type/: accessible_fields.rs  empty_prefix.rs  layout.rs  prefix_ref.rs  pt_metadata.rs  tests.rs
abi_stable/src/proc_macro_reexports/: export_root_module.rs  get_static_equivalent.rs  sabi_extern_fn.rs  sabi_trait_attribute.rs  stable_abi_derive.rs
abi_stable/src/reflection/: export_module.rs
abi_stable/src/sabi_trait/: doc_examples.rs  examples.rs  for_generated_code.rs  robject.rs  test_supertraits.rs  tests.rs  vtable.rs
abi_stable/src/sabi_types/: bitarray.rs  constructor.rs  ignored_wrapper.rs  late_static_ref.rs  maybe_cmp.rs  move_ptr.rs  nul_str.rs  return_value_equality.rs  rmut.rs  rref.rs  rsmallbox.rs  static_ref.rs  version.rs
abi_stable/src/std_types/: arc.rs  boxed.rs  cmp_ordering.rs  cow.rs  map.rs  option.rs  range.rs  result.rs  slice_mut.rs  slices.rs  static_slice.rs  static_str.rs  std_error.rs  std_io.rs  str.rs  string.rs  sync.rs  time.rs  tuple.rs  utypeid.rs  vec.rs
abi_stable/src/type_layout/: construction.rs  data_structures.rs  iterators.rs  printing.rs  shared_vars.rs  small_types.rs  tagging.rs  tl_data.rs  tl_enums.rs  tl_field.rs  tl_fields.rs  tl_functions.rs  tl_lifetimes.rs  tl_multi_tl.rs  tl_other.rs  tl_prefix.rs  tl_reflection.rs
abi_stable/src/type_level/: downcasting.rs  option.rs
abi_stable/tests/: layout_tests_modules.rs  ui_test_modules.rs
abi_stable/tests/layout_tests/: const_params.rs  erased_types.rs  extra_checks_combined.rs  get_static_equivalent.rs  get_type_layout.rs  lifetime_indices_tests.rs  nonexhaustive_enums.rs  pointer_types.rs  prefix_types.rs  repr_and_discr.rs  sabi_trait.rs  shared_types.rs  stable_abi_attributes.rs  value.rs
abi_stable_derive/: .gitignore  Cargo.toml  MIT_license  build.rs
abi_stable_derive/src/: arenas.rs  attribute_parsing.rs  common_tokens.rs  composite_collections.rs  concat_and_ranges.rs  datastructure.rs  export_root_module_impl.rs  fn_pointer_extractor.rs  gen_params_in.rs  get_static_equivalent.rs  ignored_wrapper.rs  impl_interfacetype.rs  lib.rs  lifetimes.rs  literals_constructors.rs  mangle_library_getter.rs  my_visibility.rs  parse_utils.rs  sabi_extern_fn_impl.rs  sabi_trait.rs  set_span_visitor.rs  stable_abi.rs  test_framework.rs  to_token_fn.rs  utils.rs  workaround.rs
abi_stable_derive/src/datastructure/: field_map.rs  type_param_map.rs
abi_stable_derive/src/get_static_equivalent/: attribute_parsing.rs
abi_stable_derive/src/impl_interfacetype/: attribute_parsing.rs  macro_impl.rs
abi_stable_derive/src/lifetimes/: lifetime_counters.rs  lifetime_set.rs
abi_stable_derive/src/sabi_trait/: attribute_parsing.rs  common_tokens.rs  impl_delegations.rs  (+6 more)
abi_stable_derive/test_data/: sabi_trait.ron  stable_abi.ron
abi_stable_derive_lib/: Cargo.toml
abi_stable_derive_lib/src/: arenas.rs  attribute_parsing.rs  common_tokens.rs  composite_collections.rs  constants.rs  datastructure.rs  either.rs  fn_pointer_extractor.rs  gen_param_in.rs  gen_params_in.rs  get_static_equivalent.rs  ignored_wrapper.rs  impl_interfacetype.rs  lib.rs  lifetimes.rs  macros.rs  mangle_library_getter.rs  my_visibility.rs  parse_utils.rs  prefix_types.rs  reflection.rs  repr_attrs.rs  sabi_extern_fn_impl.rs  sabi_trait.rs  set_span_visitor.rs  stable_abi.rs  to_token_fn.rs  utils.rs  workaround.rs
abi_stable_example_impl/: Cargo.toml
abi_stable_example_impl/src/: lib.rs
abi_stable_example_user/: Cargo.toml
abi_stable_example_user/src/: main.rs
abi_stable_shared/: APACHE_license  Cargo.toml
abi_stable_shared/src/: const_utils.rs  lib.rs  test_utils.rs
as_derive_utils/: Cargo.toml
as_derive_utils/src/: attribute_parsing.rs  datastructure.rs  gen_params_in.rs  lib.rs  macros.rs  parse_utils.rs  test_framework.rs  to_token_fn.rs  utils.rs
examples/example_0_impl/: Cargo.toml
examples/example_0_user/: Cargo.toml  readme.md
testing/impl_0/: Cargo.toml
testing/user/: Cargo.toml
(+209 files in other folders)
