[workspace]
members=[
    "abi_stable",
    "abi_stable_shared",
    "abi_stable_derive",
    "as_derive_utils",
    "examples/0_modules_and_interface_types/impl",
    "examples/0_modules_and_interface_types/interface",
    "examples/0_modules_and_interface_types/user",
    "examples/1_trait_objects/plugin_0",
    "examples/1_trait_objects/plugin_1",
    "examples/1_trait_objects/interface",
    "examples/1_trait_objects/application",
    "examples/2_nonexhaustive/interface",
    "examples/2_nonexhaustive/implementation",
    "examples/2_nonexhaustive/user",
    "testing/0/impl_0",
    "testing/0/interface_0",
    "testing/0/user_0",
    "testing/1 - loading errors/impl_1",
    "testing/1 - loading errors/non_abi_stable_lib",
    "testing/1 - loading errors/interface_1",
    "testing/1 - loading errors/user_1",
    "testing/version_compatibility/interface",
    "testing/version_compatibility/impl_0",
    "testing/version_compatibility/user_0",
    "tools/*",
    "playground/",
]
