[package]
name = "abi_stable"
version = "0.11.0"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
edition="2018"
license = "MIT/Apache-2.0"
description = "For doing Rust-to-Rust ffi,writing libraries loaded at program startup."
documentation = "https://docs.rs/abi_stable/"
readme="../readme.md"
keywords = ["ffi","data-structures"]
categories = ["data-structures","rust-patterns"]
repository = "https://github.com/rodrimati1992/abi_stable_crates/"
include = [
    "Cargo.toml", 
    "src/**/*.rs", 
    "../readme.md", 
    "APACHE_license", 
    "MIT_license"
]

[badges]
travis-ci = { repository =  "rodrimati1992/abi_stable_crates/" }

[features]
default = ["channels","serde_json"]

rust_1_56 = []
rust_1_57 = ["const_panic", "rust_1_56"]

rust_latest_stable = ["rust_1_57"]

# internal features
testing=[]
test_miri_track_raw = ["testing"]
only_new_tests=["testing"]
sabi_trait_examples=[]
nonexhaustive_examples=[]

# For disabling tests that break with the reduced promotion in
# https://github.com/rust-lang/rust/pull/80243#event-4161720040
no_fn_promotion = ["no_tagging_doctest"]

no_tagging_doctest = []

docsrs = []

channels=["crossbeam-channel"]


[dependencies]
abi_stable_derive= {version="0.11.0",path="../abi_stable_derive"}
abi_stable_shared= {version="0.11.0",path="../abi_stable_shared"}
serde          = { version = "1.0.136", features = ["derive"] }
repr_offset = { version = "0.2.1", default_features = false }
serde_derive   = "1.0.136"
libloading     = "0.7.3"
parking_lot    = "0.12.0"
lock_api       = "0.4.6"
generational-arena = "0.2.8"
crossbeam-channel = { version = "0.5.2", optional = true }
serde_json = { version = "1.0.79", features = ["raw_value"], optional = true }
paste = "1.0.6"
halfbrown = { version = "0.1.14", optional = true }
hashbrown = "0.12.0"

[dependencies.const_panic]
version = "0.2.1"
default_features = false
optional = true

[dependencies.core_extensions]
default_features=false
features=[
    "std",
    "iterators",
    "macro_utils",
    "self_ops",
    "type_asserts", "type_identity", "type_level_bool",
    "void",
]
version= "1.5.2"

[dev-dependencies]
bincode = "1.3.3"
crossbeam-utils = "0.8.7"
serde_json = { version = "1.0.79", features = ["raw_value"] }
rand = "0.8.5"
fnv = "1.0.7"


[build-dependencies]
rustc_version = "0.4.0"

[package.metadata.docs.rs]
features = ["docsrs", "const_params"]
