[package]
name = "abi_stable_derive"
version = "0.7.4"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
edition = "2018"
description = "Implementation detail of abi_stable."
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/abi_stable/"
keywords = ["ffi","data-structures"]
categories = ["data-structures","rust-patterns"]
repository = "https://github.com/rodrimati1992/abi_stable_crates/"
include = [
    "Cargo.toml", 
    "src/**/*.rs", 
    "../APACHE_license", 
    "../MIT_license"
]


[features]
rust_1_39=[]


[dependencies]
abi_stable_shared= {version="0.7.0",path="../abi_stable_shared"}
as_derive_utils= {version="0.8.0",path="../as_derive_utils"}
quote = "1.0"
typed-arena = "~1.5"
proc-macro2 = "1.0"

[dependencies.core_extensions]
default_features=false
features=["std"]
version="0.1"

[dependencies.syn]
version = "1.0"
features=["full","extra-traits","visit","visit-mut"]

[dev-dependencies]
serde={version="1.0",features=["derive","rc"]}
ron= "0.5"
regex= "~1.2" #regex can bump the minimum required Rust version in minor versions
aho-corasick= "0.7"


[lib]
proc-macro = true


[build-dependencies]
rustc_version = "0.2"