[package]
name = "abi_stable_derive"
version = "0.11.0"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
rust-version = "1.61.0"
edition = "2021"
description = "Implementation detail of abi_stable."
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/abi_stable/"
keywords = ["ffi","data-structures"]
categories = ["data-structures","rust-patterns"]
repository = "https://github.com/rodrimati1992/abi_stable_crates/"
include = [
    "Cargo.toml", 
    "src/**/*.rs", 
    "APACHE_license", 
    "MIT_license"
]


[features]

[dependencies]
abi_stable_shared= {version="0.11.0",path="../abi_stable_shared"}

quote = "1.0.15"
typed-arena = "2.0.1"
proc-macro2 = "1.0.36"

[dependencies.core_extensions]
default_features=false
features=["std", "iterators", "self_ops", "slices", "type_level_bool"]
version= "1.5.2"

[dependencies.syn]
version = "1.0.86"
features=["full","extra-traits","visit","visit-mut"]


###### as_derive_utils

[dependencies.as_derive_utils]
version="0.11.0"
path="../as_derive_utils"

[dev-dependencies.as_derive_utils]
version="0.11.0"
path="../as_derive_utils"
features=["testing"]




[lib]
proc-macro = true


[build-dependencies]
rustc_version = "0.4.0"
