[package]
name = "abi_stable_derive_lib"
version = "0.1.0"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
edition = "2018"

[dependencies]
quote = "0.6.11"
typed-arena = "1.4"
proc-macro2 = "0.4"
arrayvec    = "0.4"

[dependencies.core_extensions]
default_features=false
version="0.1"
path="../../crates/shared_extensions/core_extensions"

[dependencies.syn]
version = "0.15"
features=["full","extra-traits","visit","visit-mut"]

