[package]
name = "abi_stable_derive_lib"
version = "0.1.1"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
edition = "2018"
description = "Implementation detail of abi_stable."
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/abi_stable/"
keywords = ["ffi","data-structures"]
categories = ["data-structures","rust-patterns"]
repository = "https://github.com/rodrimati1992/abi_stable_crates/"
include = [
    "Cargo.toml", 
    "src/**/*.rs", 
    "../APACHE_license", 
    "../MIT_license"
]

[dependencies]
quote = "0.6.11"
typed-arena = "1.4"
proc-macro2 = "0.4"
arrayvec    = "0.4"

[dependencies.core_extensions]
default_features=false
version="0.1"

[dependencies.syn]
version = "0.15"
features=["full","extra-traits","visit","visit-mut"]

