[package]
name = "abi_stable_example_impl"
version = "0.1.0"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
edition = "2018"

[features]
different_abi=["abi_stable_example_interface/different_abi"]

[dependencies]
abi_stable={version="0.1"}
core_extensions="0.1"
serde={version="1.0",features=["derive"]}
serde_json="1.0"

[dependencies.abi_stable_example_interface]
version="0.1"
path="../abi_stable_example_interface"

[lib]
name = "text_operations"
crate-type = ["cdylib",'rlib']
