[package]
name = "abi_stable_shared"
version = "0.11.0"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
edition = "2021"
description = "Implementation detail of abi_stable."
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/abi_stable/"
keywords = ["ffi","data-structures"]
categories = []
repository = "https://github.com/rodrimati1992/abi_stable_crates/"
include = [
    "Cargo.toml", 
    "src/**/*.rs", 
    "APACHE_license", 
    "MIT_license"
]


[dependencies]

[dependencies.core_extensions]
default_features=false
features=["std", "self_ops", "slices", "type_level_bool"]
version= "1.5.2"
