[package]
name = "as_derive_utils"
version = "0.10.3"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
edition = "2018"
description = "private derive utilities used by abi_stable and structural."
license = "MIT/Apache-2.0"
keywords = []
categories = []
repository = "https://github.com/rodrimati1992/abi_stable_crates/"
include = [
    "Cargo.toml", 
    "src/**/*.rs", 
    "APACHE_license", 
    "MIT_license"
]

[features]
testing=["serde", "serde_derive","ron", "bitflags","regex","aho-corasick"]

[dependencies]
quote = "1.0.7"
proc-macro2 = "1.0.24"
serde= { version = "1.0.117", features = ["derive","rc"], optional = true }
bitflags = {version = ">=1.2.0, <1.3.0", optional = true }
ron= { version = "0.6.2", optional = true }
regex= { version = "1.4.1", optional = true }
aho-corasick= { version = "0.7.14", optional = true }

# Used purely to work around minimum-version bug in ron and serde
serde_derive= { version = "1.0.117", optional = true }

[dependencies.syn]
version = "1.0.46"
features=["extra-traits"]

[dependencies.core_extensions]
default_features=false
features=["std", "self_ops", "type_level_bool"]
version= "1.4.2"
