[package]
name = "as_derive_utils"
version = "0.11.0"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
edition = "2021"
rust-version = "1.61.0"
description = "private derive utilities used by abi_stable and structural."
license = "MIT/Apache-2.0"
keywords = []
categories = []
repository = "https://github.com/rodrimati1992/abi_stable_crates/"
include = [
    "Cargo.toml", 
    "src/**/*.rs", 
    "APACHE_license", 
    "MIT_license"
]

[features]
testing=["serde", "serde_derive","ron", "bitflags","regex","aho-corasick"]

[dependencies]
quote = "1.0.15"
proc-macro2 = "1.0.36"
serde= { version = "1.0.136", features = ["derive","rc"], optional = true }
bitflags = { version = "1.3.2", optional = true }
ron= { version = "0.7.0", optional = true }
regex= { version = "1.5.5", optional = true }
aho-corasick= { version = "0.7.18", optional = true }

# Used purely to work around minimum-version bug in ron and serde
serde_derive= { version = "1.0.136", optional = true }

[dependencies.syn]
version = "1.0.86"
features=["extra-traits"]

[dependencies.core_extensions]
default_features=false
features=["std", "self_ops", "type_level_bool"]
version= "1.5.2"
