[package]
name = "example_0_impl"
version = "0.1.0"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
edition = "2018"

[dependencies]
abi_stable={version="0.2",path="../../abi_stable"}
core_extensions="0.1"
serde={version="1.0",features=["derive"]}
serde_json="1.0"

[dependencies.example_0_interface]
version="0.1"
path="../example_0_interface"

[lib]
name = "text_operations"
crate-type = ["cdylib",'rlib']
