[package]
name = "testing_impl_0"
version = "0.1.0"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
edition = "2018"

[dependencies]
abi_stable={version="0.3",path="../../abi_stable"}
core_extensions="0.1"

[dependencies.testing_interface_0]
version="0.1"
path="../interface_0"

[lib]
name = "testing"
crate-type = ["cdylib",'rlib']
