[package]
name = "example_0_impl"
version = "0.1.0"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
edition = "2018"

[dependencies]
abi_stable={version="*",path="../../../abi_stable"}
core_extensions={ version = "0.1.18", default_features = false, features = ["std"] }
serde={ version = "1.0.117", features = ["derive"] }
serde_json= "1.0.59"

[dependencies.example_0_interface]
version="0.1"
path="../interface"

[lib]
name = "text_operations"
crate-type = ["cdylib",'rlib']
