[package]
name = "example_1_application"
version = "0.1.0"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
edition = "2018"

[dependencies]
abi_stable={version="*",path="../../../abi_stable"}
core_extensions = "0.1"
serde={version="1.0",features=["derive"]}
serde_json = {version="1.0",features=["raw_value"]}
smallvec="0.6"

[dependencies.example_1_interface]
version="0.1"
path="../interface"
