[package]
name = "example_1_application"
version = "0.1.0"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
edition = "2018"

[dependencies]
abi_stable={version="*",path="../../../abi_stable"}
core_extensions={ version = "1.4.0", default_features = false, features = ["std"] }
serde={ version = "1.0.117", features = ["derive"] }
serde_json = { version = "1.0.59", features = ["raw_value"] }
smallvec= "1.4.2"

[dependencies.example_1_interface]
version="0.1"
path="../interface"
