[package]
name = "example_1_interface"
version = "0.1.0"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
edition = "2018"

[dependencies]
abi_stable={version="*",path="../../../abi_stable"}
serde={ version = "1.0.117", features = ["derive"] }
arrayvec= "0.5.1"
core_extensions={ version = "0.1.18", default_features = false, features = ["std"] }
serde_json= "1.0.59"
