[package]
name = "example_1_plugin_text_munging"
version = "0.1.0"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
edition = "2018"

[dependencies]
abi_stable={version="*",path="../../../abi_stable"}
core_extensions={ version = "1.5.2", default_features = false, features = ["std"] }
serde={ version = "1.0.136", features = ["derive"] }
serde_json= "1.0.79"

[dependencies.example_1_interface]
version="0.1"
path="../interface"

[lib]
name = "example_1_plugin_text_munging"
crate-type = ["cdylib",'rlib']
