[package]
name = "example_1_plugin_utils"
version = "0.1.0"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
edition = "2018"

[dependencies]
abi_stable={version="*",path="../../../abi_stable"}
core_extensions= "1.5.2"
serde={ version = "1.0.136", features = ["derive"] }
serde_json = { version = "1.0.79", features = ["raw_value"] }

[dependencies.example_1_interface]
version="0.1"
path="../interface"

[lib]
name = "example_1_plugin_utils"
crate-type = ["cdylib",'rlib']
