[package]
name = "example_2_implementation_1_1"
version = "1.1.0"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
edition = "2018"

[dependencies]
abi_stable={path="../../../abi_stable"}
core_extensions="0.1"
serde="1.0"
serde_json="1.0"

[dependencies.example_2_interface]
path="../interface"
features=["v1_1"]

[lib]
name = "shop"
crate-type = ["cdylib",'rlib']
