[package]
name = "example_2_interface"
version = "1.1.0"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
edition = "2021"

[dependencies]
abi_stable={path="../../../abi_stable"}
core_extensions={ version = "1.5.2", default_features = false, features = ["std"] }
serde={ version = "1.0.136", features = ["derive"] }
serde_json={ version = "1.0.79", features = ["raw_value"] }


[features]
v1_1=[]
