[package]
name = "example_2_user"
version = "0.1.0"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
edition = "2021"

[dependencies]
abi_stable={version="*",path="../../../abi_stable"}
structopt = "0.3.26"
core_extensions={ version = "1.5.2", default_features = false, features = ["std"] }
serde_json = "1.0.79"

[dependencies.example_2_interface]
version="1.0"
path="../interface"
