[package]
name = "readme_implementation"
version = "0.1.0"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
edition = "2021"

[lib]
name = "example_library"
crate-type = ["cdylib",'rlib']

[dependencies]
abi_stable={path="../../../abi_stable"}

[dependencies.readme_interface]
path = "../readme_interface"
features = ["impls"]


