[package]
name = "testing_impl_0"
version = "0.1.0"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
edition = "2021"

[dependencies]
abi_stable={version="*",path="../../../abi_stable"}
core_extensions={ version = "1.5.2", default_features = false, features = ["std"] }

[dependencies.testing_interface_0]
version="0.1"
path="../interface_0"

[lib]
name = "testing"
crate-type = ["cdylib",'rlib']
