[package]
name = "version_compatibility_interface"
version = "0.1.0"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
old=[]
new=[]

[dependencies]
old_abi_stable={version="0.11",package="abi_stable"}
new_abi_stable={path="../../../abi_stable",package="abi_stable"}
