[package]
name = "version_compatibility_user"
version = "0.1.0"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
edition = "2018"

[features]
"run" = [
    "version_compatibility_interface/new",
    "version_compatibility_interface/old",
]

[dependencies]
abi_stable={path="../../../abi_stable"}
core_extensions={ version = "0.1.18", default_features = false }



[dependencies.version_compatibility_interface]
version="0.1"
path="../interface"
