[package]
name = "version_compatibility_user"
version = "0.1.0"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
edition = "2018"

[dependencies]
abi_stable={path="../../../abi_stable"}
core_extensions={ version = "1.4.0", default_features = false }

[dependencies.version_compatibility_interface]
version="0.1"
path="../interface"
features = ["new"]